--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
   },
   "dependencies": {
     "@motionone/utils": "^10.15.1",
+    "contentful": "^10.3.6",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "file-loader": "^6.2.0",
     "framer-motion": "^10.12.16",
+    "gsap": "^3.12.2",
+    "locomotive-scroll": "^4.1.4",
     "next": "13.4.6",
+    "next-images": "^1.8.5",
     "nodemailer": "^6.9.3",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-locomotive-scroll": "^0.2.2",
+    "react-parallax": "^3.5.1",
     "react-rough-notation": "^1.0.5",
     "rough-notation": "^0.5.1",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "smooth-scroll": "^16.1.3",
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
